# Hometown-Success-Engine

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  DEVPOST_COPY.md  Dockerfile  Procfile  README.md  firebase.json  fix_dashes.py  fix_terminology.py  requirements.txt
backend/: Dockerfile  Procfile  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api-client.ts  hometown-hub-map.ts  main.ts  store.ts  vite-env.d.ts  widget-contract.ts
pipeline/: README.md  chat_smoke.py  check_2026_coverage.py  cluster.py  geocode.py  ingest_milan_cortina.py  ingest_wikidata.py  narrate.py  normalize.py  parity_smoke.py  pyproject.toml  requirements.txt  state_constellation_smoke.py  voice_ws_smoke.py
pipeline/climate/: climate.json  fetch_climate.py
pipeline/clustered/: athletes_public.json  hometowns_public.json  hubs.json
pipeline/compliance/: data-sources.md
pipeline/narratives/: enrich_geography.py  hubs.json
