[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hometown-success-engine-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
"fastapi>=0.115.0",
"uvicorn[standard]>=0.32.0",
"gunicorn>=23.0.0",
"pydantic>=2.9.0",
"google-genai>=1.74.0",
"google-cloud-firestore>=2.19.0",
"google-cloud-bigquery>=3.27.0",
"python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
"mypy>=1.13.0",
"pytest>=8.3.0",
"ruff>=0.7.0",
"httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true